add profile prod and jacoco